--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.61.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-svg": "^11.0.1",
     "react-navigation": "^4.0.10",
