--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@fortawesome/react-native-fontawesome": "^0.2.0",
+    "@react-native-community/masked-view": "^0.1.6",
     "@types/react-fontawesome": "^1.6.4",
     "core-js": "^3.6.4",
     "react": "16.9.0",
@@ -24,6 +25,8 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.32",
     "react-native-svg": "^11.0.1",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
