--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.6.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-calendar-picker": "^6.0.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-linear-gradient": "^2.5.6",
