--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@fortawesome/react-native-fontawesome": "^0.2.0",
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/datetimepicker": "^2.1.2",
     "@react-native-community/masked-view": "^0.1.6",
     "@types/react-fontawesome": "^1.6.4",
     "core-js": "^3.6.4",
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-calendar-picker": "^6.0.5",
